--- a/backend/banco/src/main/resources/application.properties
+++ b/backend/banco/src/main/resources/application.properties
@@ -3,7 +3,10 @@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/db_servipago?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/db_servipago?useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=gramosm
+#spring.datasource.url=jdbc:mysql://204.48.29.18:3306/db_servipago?useSSL=true&zeroDateTimeBehavior=convertToNull
+#spring.datasource.username=diegobbva
+#spring.datasource.password=Goku2205*
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
